--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -72,6 +72,7 @@
                 android:src="@drawable/text" />
 
             <TextView
+                android:id="@+id/senderName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="SARWAT AIJAZ"
@@ -127,6 +128,7 @@
                     android:src="@drawable/text" />
 
                 <TextView
+                    android:id="@+id/receiverName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="SOBIA AIJAZ"
