--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -146,6 +146,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/totalAmount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
@@ -154,6 +155,7 @@
         android:textSize="16sp"/>
 
     <EditText
+        android:id="@+id/enteredAmount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
